--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ analytics:
 author:
   name             : "Ekofi Science"
   avatar           : #"/assets/images/t-azure.png"
-  bio              : "Her hayal bir dünyadır."
+  bio              : "Every dream is a world."
   location         : 
   email            : "ferhat@ekofi.science"
   uri              :
