--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ teaser                   : # path of fallback teaser image, e.g. "/assets/images
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
 comments:
-  provider               : ""
+  provider               : "disqus"
   disqus:
     shortname            : "ekofiresearch"
   discourse:
