--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title                    : "Ekofi Research - Science News"
 title_separator          : "-"
 name                     : "Ekofi Research"
 description              : "Browse the latest scientific news and learn about the most interesting and wonderful content."
-url                      : 
+url                      : https://nitro.ekofi.science
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
